# Auto_trading-platform

./: .dockerignore  .env.example  .gitignore  BACKTEST_ANALYSIS_REPORT.md  BACKTEST_REPORT_QUALITY_IMPROVEMENTS.md  BACKTEST_SUMMARY.txt  CHANGES_SUMMARY.txt  Dockerfile  PRODUCTION_READY_SYSTEM.md  Procfile  README.md  alembic.ini  docker-compose-full.yml  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  trading.db
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  20260424_481b49b49769_sync_nullable_and_constraints.py
api/: deps.py  main.py  market_stream_runtime.py  schemas.py
api/routes/: dashboard.py  data.py  execution.py  health.py  live.py  model.py  options.py  predict.py  signal.py
backtesting/: engine.py  metrics.py  signal_backtest.py  strategies.py
brokers/: __init__.py  base.py  factory.py  upstox_broker.py
data_layer/: __init__.py
db/: connection.py  init_db.py  models.py  view_manager.py
execution_engine/: __init__.py  ai_intelligence.py  broker.py  engine.py  intraday_rules.py  live_service.py  risk_manager.py  slippage_tracker.py  strike_selector.py
feature_engine/: feature_builder.py  labels.py  macro_features.py  microstructure_features.py  price_features.py  regime_detection.py  sentiment_features.py  volume_features.py
logs/: api.log.2026-04-24
models/: ab_testing.py  calibration_v3.py  common.py  intraday_v1.py  online_learning.py  v3_pipeline.py
observability/: __init__.py  metrics.py  middleware.py  prometheus.yml
prediction_engine/: __init__.py  adaptive_thresholds.py  combine_logic.py  confidence_engine.py  consensus_engine.py  consensus_profiles.json  consensus_scoring.py  options_engine.py  orchestrator.py  signal_engine.py
scripts/: _bootstrap.py  backfill_signals.py  backtest_30x_report.py  backtest_all_signals.py  backtest_signal.py  build_features.py  export_daily_logs.py  fetch_and_crosscheck_dates.py  generate_session_trade_audit.py  generate_upstox_access_token.py  ingest_candles.py  ingest_news.py  migrate_add_order_book_table.py  purge_non_1m_data.py  quick_backtest.py  rescore_news_sentiment.py  run_accuracy_enhancements.py  run_inference.py  run_multiday_backtest.py  run_phase1_upstox_nodocker.py  start_api.py  start_celery_beat.py  start_celery_worker.py  start_execution_loop.py  start_market_stream.py  start_scheduler.py  train_models.py  validate_accuracy.py  validate_and_repair_data.py
task_queue/: __init__.py  celery_app.py
tradingview/: multi_strategy_auto_orders.pine
utils/: __init__.py  calendar_utils.py  cli.py  config.py  constants.py  email_reports.py  intervals.py  logger.py  market_context.py  notifications.py  pine_strategy.py  symbols.py  types.py
web/: app.js  index.html  styles.css
(+76 files in other folders)
