[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automated-ai-trading-platform"
version = "0.1.0"
description = "Next-day Indian market candle prediction platform using Upstox and news sentiment."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "apscheduler==3.10.4",
  "fastapi==0.115.0",
  "feedparser==6.0.11",
  "holidays==0.58",
  "httpx==0.27.2",
  "numpy==2.1.1",
  "pandas==2.2.2",
  "pydantic==2.9.2",
  "pydantic-settings==2.5.2",
  "python-dateutil==2.9.0.post0",
  "python-dotenv==1.0.1",
  "prometheus-client==0.20.0",
  "scikit-learn==1.5.2",
  "sqlalchemy==2.0.35",
  "psycopg[binary]==3.2.3",
  "upstox-python-sdk==2.19.0",
  "uvicorn[standard]==0.30.6",
  "xgboost==2.1.1",
  "lightgbm==4.5.0",
  "catboost==1.2.7",
  "arch==7.1.0",
]

[project.optional-dependencies]
nlp = [
  "transformers>=5.5.0",
  "torch>=2.4.0,<2.8.0",
]
dev = [
  "pytest==8.3.3",
  "pytest-cov==5.0.0",
  "ruff==0.6.8",
]
ops = [
  "celery[redis]==5.4.0",
  "redis==5.0.8",
  "flower==2.0.1",
  "prometheus-fastapi-instrumentator==7.0.0",
]

[project.scripts]
trading-cli = "utils.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "backtesting*", "data_layer*", "db*", "feature_engine*", "models*", "prediction_engine*", "utils*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
