[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automated-ai-trading-platform"
version = "0.1.0"
description = "Realtime options trading desk with a FastAPI backend and streaming React UI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.0",
  "holidays==0.58",
  "httpx==0.27.2",
  "numpy>=1.24.0,<2.0.0",
  "pandas>=2.0.0,<3.0.0",
  "pydantic==2.9.2",
  "pydantic-settings==2.5.2",
  "python-dateutil==2.9.0.post0",
  "python-dotenv==1.0.1",
  "prometheus-client==0.20.0",
  "sqlalchemy==2.0.35",
  "psycopg[binary]==3.2.3",
  "upstox-python-sdk==2.19.0",
  "uvicorn[standard]==0.30.6",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.3",
  "pytest-cov==5.0.0",
  "ruff==0.6.8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "data_layer*", "db*", "execution_engine*", "feature_engine*", "prediction_engine*", "utils*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
